[gd_scene load_steps=11 format=3 uid="uid://cj6tyoaigotbh"]

[ext_resource type="Script" path="res://Objects/Enemies/AirEnemies/LakituDrop.gd" id="1_btj23"]
[ext_resource type="Texture2D" uid="uid://bsxhakw6qp6ac" path="res://Sprites/explosive-bomb-black-png.png" id="1_pc8jj"]
[ext_resource type="Shader" path="res://Shaders/Impact.gdshader" id="3_xye8s"]
[ext_resource type="Texture2D" uid="uid://c4icc4rr6oks2" path="res://icon.svg" id="4_5r35i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jcmav"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_bawh1"]
radius = 33.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nllm1"]
shader = ExtResource("3_xye8s")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/force = 0.0
shader_parameter/size = 0.05
shader_parameter/thickness = 0.01
shader_parameter/abberation_strength = 0.2

[sub_resource type="Animation" id="Animation_ia6sa"]
resource_name = "Explosion"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/ExplosionHitbox:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ImpulseShader:material:shader_parameter/force")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(0.3, 35.2698),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ImpulseShader:material:shader_parameter/thickness")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, -0.1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_45aqw"]
resource_name = "Startup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:process_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_explosion"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_up7yg"]
_data = {
"Explosion": SubResource("Animation_ia6sa"),
"Startup": SubResource("Animation_45aqw")
}

[node name="LakituDrop" type="RigidBody2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource("1_btj23")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_pc8jj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jcmav")

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="ExplosionHitbox" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_bawh1")
debug_color = Color(0.701961, 0.054902, 0, 0.419608)

[node name="ImpulseShader" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_nllm1")
position = Vector2(-1.43051e-06, -3.8147e-06)
scale = Vector2(10.1563, 9.14063)
texture = ExtResource("4_5r35i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_up7yg")
}
autoplay = "Startup"

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
